--- a/walker/package.json
+++ b/walker/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.0.4"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
