--- a/walker/package.json
+++ b/walker/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-circular-progress": "^1.0.1",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-svg": "^6.5.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4"
   },
