--- a/walker/android/build.gradle
+++ b/walker/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        mavenLocal()
+        google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
@@ -11,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-
+        classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
