--- a/walker/package.json
+++ b/walker/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.3.1",
     "immutability-helper": "^2.7.1",
     "lodash": "^4.17.10",
     "react": "16.4.1",
