--- a/walker/android/app/build.gradle
+++ b/walker/android/app/build.gradle
@@ -138,6 +138,12 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-svg')
+    compile project(':react-native-push-notification')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-firebase')
+    compile project(':react-native-charts-wrapper')
     // This should be here already
     implementation project(':react-native-firebase')
 
