--- a/walker/package.json
+++ b/walker/package.json
@@ -16,6 +16,7 @@
     "react-native-circular-progress": "^1.0.1",
     "react-native-firebase": "^4.3.8",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-push-notification": "^3.1.1",
     "react-native-svg": "^6.5.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4"
